Bug 75243 - FILESAVE: Empty custom properties are lost while saving in .doc format
Summary: FILESAVE: Empty custom properties are lost while saving in .doc format
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: medium normal
Assignee: Tarun Kumar
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords: patch
Depends on:
Blocks:
 
Reported: 2014-02-20 05:38 UTC by Tarun Kumar
Modified: 2014-03-10 10:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
proposed patch. bSkipEmpty is set to false in header file (815 bytes, patch)
2014-02-20 05:38 UTC, Tarun Kumar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tarun Kumar 2014-02-20 05:38:17 UTC
Created attachment 94406 [details]
proposed patch. bSkipEmpty is set to false in header file

Problem Description

In some scenarios, empty properties are created in the writer file(in .doc format), which are later populated automatically through some tool (example work flow scenarios). Writer removes empty custom property while saving the document in .doc format

Steps to reproduce:
1. Open Writer and use a document .doc
2. Add it a custom property. Donot enter any value for the property
3. Save it and close Writer
4. Open again Writer and use same document reciently saved.
5. Custom property is lost.

Current behavior:

Expected behavior:
Writer should retain empty custom property also while saving the file in .doc format

Note: Attached patch is tested on LO 4.2 source code; tested and working fine
Comment 1 sophie 2014-02-20 15:27:16 UTC
I set it to new, but for me properties are lost when I close the property dialog if they are empty, even before saving and reopening the document.
Set as new, add keyword patch - Sophie
Comment 2 Commit Notification 2014-03-10 10:23:46 UTC
Tarun Kumar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ba58a22bdd51cd4221547e0a0e95b6d2b987358

fdo#75243: MSO export: save custom properties with empty value



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-03-10 10:25:08 UTC
Tarun Kumar committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c3813789af24ae53153e0014ce5e4fff880197a2&h=libreoffice-4-2

fdo#75243: MSO export: save custom properties with empty value


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2014-03-10 10:25:50 UTC
fixed, thanks for the patch