fdo#75243: MSO export: save custom properties with empty value

LO removes empty properties while saving the doc. This is required in some
business scenarios.
bSkipEmpty is set to false by default to enable LibreOffice to save
even empty properties.

Change-Id: I7aafe0c0be02a98fa6e72d73e9e4348a015da61f
(cherry picked from commit 3ba58a22bdd51cd4221547e0a0e95b6d2b987358)
Signed-off-by: Michael Stahl <mstahl@redhat.com>